<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_fees"
            android:icon="@drawable/ic_payment"
            android:title="@string/fees_and_payments"/>
        <item
            android:id="@+id/nav_disability"
            android:icon="@drawable/ic_accessibility"
            android:title="@string/disability_support"/>
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/library"/>
        <item
            android:id="@+id/nav_IT_services"
            android:icon="@drawable/ic_it"
            android:title="@string/it_services"/>
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_book"
            android:title="@string/confirm_my_modules"/>
        <item
            android:id="@+id/nav_moodle"
            android:icon="@drawable/ic_school"
            android:title="@string/moodle"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile"/>
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_record"
            android:title="@string/records"/>
        <item
            android:id="@+id/nav_ask"
            android:icon="@drawable/ic_help"
            android:title="@string/ask_a_question"/>
    </group>

    <item android:title="@string/log_out">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out"/>
        </menu>
    </item>
</menu>